--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "@fortawesome/react-fontawesome": "^0.1.7",
     "@material-ui/core": "^4.6.0",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.32",
     "@material-ui/styles": "^4.6.0",
     "color": "^3.1.2",
     "fg-loadcss": "^2.1.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-jvectormap": "0.0.14",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "cra-alias start",
