--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "fg-loadcss": "^2.1.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-jvectormap": "0.0.14",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-simple-maps": "^0.12.1",
     "redux": "^4.0.4"
   },
   "scripts": {
