--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/styles": "^4.6.0",
     "color": "^3.1.2",
     "fg-loadcss": "^2.1.0",
+    "immutability-helper": "^3.0.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
