--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
+    "@manaflair/redux-batch": "^1.0.0",
     "@material-ui/core": "^4.6.0",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.32",
     "@material-ui/styles": "^4.6.0",
+    "@reduxjs/toolkit": "^1.0.4",
     "color": "^3.1.2",
     "fg-loadcss": "^2.1.0",
     "immutability-helper": "^3.0.1",
+    "mongoose": "^5.7.12",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
