--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "color": "^3.1.2",
     "fg-loadcss": "^2.1.0",
     "immutability-helper": "^3.0.1",
-    "mongoose": "^5.7.12",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
@@ -35,6 +34,11 @@
   "jest": {
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
+    ],
+    "coveragePathIgnorePatterns": [
+      "<rootDir>/src/index.js",
+      "<rootDir>/src/serviceWorker.js",
+      "<rootDir>/src/Utils/FontAwesomeWrapper.js"
     ]
   },
   "eslintConfig": {
