--- a/package.json
+++ b/package.json
@@ -62,8 +62,9 @@
     "cra-alias": "^4.13.19",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
+    "geckodriver": "^1.19.1",
     "jest-enzyme": "^7.1.2",
     "react-test-renderer": "^16.12.0",
-    "tsutils": "^3.17.1"
+    "selenium-webdriver": "^4.0.0-alpha.5"
   }
 }
