--- a/package.json
+++ b/package.json
@@ -8,27 +8,28 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
     "@manaflair/redux-batch": "^1.0.0",
-    "@material-ui/core": "^4.6.0",
+    "@material-ui/core": "^4.7.0",
     "@material-ui/icons": "^4.5.1",
-    "@material-ui/lab": "^4.0.0-alpha.32",
+    "@material-ui/lab": "^4.0.0-alpha.33",
     "@material-ui/styles": "^4.6.0",
     "@reduxjs/toolkit": "^1.0.4",
     "color": "^3.1.2",
     "fg-loadcss": "^2.1.0",
     "immutability-helper": "^3.0.1",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-simple-maps": "^0.12.1",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "lazy.js": "^0.5.1"
   },
   "scripts": {
-    "start": "cra-alias start",
-    "build": "cra-alias build",
-    "test": "cra-alias test --runInBand",
-    "coverage": "cra-alias test --coverage",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test --runInBand",
+    "coverage": "craco test --coverage",
     "eject": "react-scripts eject"
   },
   "jest": {
@@ -58,8 +59,9 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^5.6.2",
     "@types/jest": "^24.0.23",
-    "cra-alias": "^4.13.19",
+    "craco-alias": "^1.0.4",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "geckodriver": "^1.19.1",
