--- a/package.json
+++ b/package.json
@@ -3,34 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-brands-svg-icons": "^5.11.2",
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@fortawesome/react-fontawesome": "^0.1.7",
     "@manaflair/redux-batch": "^1.0.0",
-    "@material-ui/core": "^4.7.0",
-    "@material-ui/icons": "^4.5.1",
-    "@material-ui/lab": "^4.0.0-alpha.33",
-    "@material-ui/styles": "^4.6.0",
-    "@reduxjs/toolkit": "^1.0.4",
+    "@material-ui/core": "^4.10.1",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.55",
+    "@material-ui/styles": "^4.10.0",
+    "@reduxjs/toolkit": "^1.3.6",
+    "chartist": "^0.11.4",
     "color": "^3.1.2",
-    "fg-loadcss": "^2.1.0",
-    "immutability-helper": "^3.0.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "react-simple-maps": "^0.12.1",
-    "redux": "^4.0.4",
-    "lazy.js": "^0.5.1"
+    "immutability-helper": "^3.1.1",
+    "lazy.js": "^0.5.1",
+    "react": "^16.13.1",
+    "react-chartist": "^0.14.3",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.1",
+    "react-simple-maps": "^2.1.2",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "craco start",
-    "build": "craco build",
-    "test": "craco test --runInBand",
-    "coverage": "craco test --coverage",
-    "eject": "react-scripts eject"
+    "build": "craco build"
   },
   "jest": {
     "snapshotSerializers": [
@@ -39,8 +33,7 @@
     "coveragePathIgnorePatterns": [
       "<rootDir>/src/index.js",
       "<rootDir>/src/serviceWorker.js",
-      "<rootDir>/src/App.js",
-      "<rootDir>/src/Utils/FontAwesomeWrapper.js"
+      "<rootDir>/src/App.js"
     ]
   },
   "eslintConfig": {
@@ -59,14 +52,7 @@
     ]
   },
   "devDependencies": {
-    "@craco/craco": "^5.6.2",
-    "@types/jest": "^24.0.23",
-    "craco-alias": "^1.0.4",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1",
-    "geckodriver": "^1.19.1",
-    "jest-enzyme": "^7.1.2",
-    "react-test-renderer": "^16.12.0",
-    "selenium-webdriver": "^4.0.0-alpha.5"
+    "@craco/craco": "^5.6.4",
+    "craco-alias": "^2.1.1"
   }
 }
