--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "react-simple-maps": "^2.1.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "@craco/craco": "^5.6.4",
+    "craco-alias": "^2.1.1"
   },
   "scripts": {
     "start": "craco start",
@@ -42,7 +44,5 @@
     ]
   },
   "devDependencies": {
-    "@craco/craco": "^5.6.4",
-    "craco-alias": "^2.1.1"
   }
 }
