--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "material-dashboard",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://davidanitoiu.github.io/material-dashboard",
   "dependencies": {
     "@manaflair/redux-batch": "^1.0.0",
     "@material-ui/core": "^4.10.1",
@@ -21,12 +22,14 @@
     "react-scripts": "^3.4.1",
     "react-simple-maps": "^2.1.2",
     "redux": "^4.0.5",
-    "@craco/craco": "^5.6.4",
-    "craco-alias": "^2.1.1"
+    "@craco/craco": "^5.6.4"
   },
   "scripts": {
     "start": "craco start",
-    "build": "craco build"
+    "build": "craco build",
+    "serve": "npx serve -s build",
+    "predeploy": "npm run build",
+    "deploy": "npx gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -44,5 +47,6 @@
     ]
   },
   "devDependencies": {
+    "craco-alias": "^2.1.1"
   }
 }
